--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,8 @@ google-auth-httplib2==0.1.0
 google-api-python-client==2.97.0
 oauth2client==4.1.3
 asyncio==3.4.3
-
+Flask==1.1.2
+gunicorn==20.1.0
+Jinja2==3.0.3
+werkzeug==2.0.2
+itsdangerous==2.0.1
